Change align-items property from start to flex-start to avoid console warnings

--- a/src/components/AddComment/AddComment.module.scss
+++ b/src/components/AddComment/AddComment.module.scss
@@ -11,7 +11,7 @@
 .form {
 	display: flex;
 	flex-direction: column;
-	align-items: start;
+	align-items: flex-start;
 	max-width: 52rem;
 	width: 100%;
 
