--- a/src/components/HeaderSection/HeaderSection.module.scss
+++ b/src/components/HeaderSection/HeaderSection.module.scss
@@ -25,7 +25,7 @@
 	display: flex;
 	flex-direction: column;
 	margin-top: 10rem;
-	align-items: start;
+	align-items: flex-start;
 	text-align: left;
 	color: #fafafa;
 
